--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" type="text/javascript"></script>
-
+    <link rel="stylesheet" href="/public/css/index.css">
+    <script src="/public/js/index.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="view">
